RESOLVED FIXED307280
[GFC] Fix vector allocation bug in grid sizing algorithm.
https://bugs.webkit.org/show_bug.cgi?id=307280
Summary [GFC] Fix vector allocation bug in grid sizing algorithm.
Yulun Wu
Reported 2026-02-08 12:54:27 PST
Attachments
Yulun Wu
Comment 1 2026-02-08 12:55:52 PST
EWS
Comment 2 2026-02-09 08:07:34 PST
Committed 307078@main (08049af9553d): <https://commits.webkit.org/307078@main> Reviewed commits have been landed. Closing PR #58151 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.