[GFC] Fix vector allocation bug in grid sizing algorithm. https://bugs.webkit.org/show_bug.cgi?id=307280 <rdar://169927118>

Reviewed by Sammy Gill.

This PR fixes an issue where UsedInlineSizes and UsedBlockSizes
are initialized with a sized constructors, after which append()
adds more elements to the vector.

This caused the vectors to be 2× the intended size.

* Source/WebCore/layout/formattingContexts/grid/GridLayout.cpp:
(WebCore::Layout::GridLayout::layoutGridItems const):

Canonical link: https://commits.webkit.org/307078@main